fixed redis issue